recursion.cons.occurrences.Occurrences.scala.error
Compilation error:
Occurrences:3: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Boolean
  if (Nil)
      ^Occurrences:6: error: not found: value a
  if (l.head == a)
                ^Occurrences:7: error: not found: value occurences
  return 1 + occurences(L.tail,a)
             ^Occurrences:7: error: not found: value L
  return 1 + occurences(L.tail,a)
                        ^Occurrences:7: error: not found: value a
  return 1 + occurences(L.tail,a)
                               ^Occurrences:9: error: not found: value occurences
  return occurences(l.tail,a)
         ^Occurrences:9: error: not found: value a
  return occurences(l.tail,a)
                           ^