recursion.cons.occurrences.Occurrences.scala.code
def occurrences(l:List[Int], v:Int): Int = {
  if (Nil)
  return 0
  else
  if (l.head == a)
  return 1 + occurences(L.tail,a)
  else
  return occurences(l.tail,a)
}